# set-theory

./: set-theory.cabal  set-theory.ebnf  stack.yaml
app/: Main.hs
src/: Set.hs  Set2.hs
