name:                set-theory
version:             0.1.0.0
homepage:            https://github.com/jean-lopes/set-theory#readme
license:             MIT
license-file:        LICENSE
author:              Jean Carlo Giambastiani Lopes
maintainer:          jean.lopes@hotmail.com.br
copyright:           2017 Jean Carlo Giambastiani Lopes
category:            demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  exposed-modules:     Set
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
  default-language:    Haskell2010

executable set-theory
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-repl
                     , set-theory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jean-lopes/set-theory
